Add google_oauth2 and set up

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 APP_ID_FACEBOOK=307816976561268
 APP_SECRET_FACEBOOK=6e3a8e8d83541a07b73b717db3389a08
+GOOGLE_CLIENT_ID=342310820566-8gkm85bteusu18632a9hcna87vs4isi8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=EHVZZlxRQ2O0SW8yR7rHdfm9
