--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,58 +1,29 @@
-require:
-  - rubocop-rspec
-
 AllCops:
-  TargetRubyVersion: 2.5.0
-  Include:
-    - '*.gemspec'
   Exclude:
-    - 'bin/*'
     - 'vendor/**/*'
-    - 'db/*'
-
+    - 'spec/**/*'
+    - 'config/**/*'
+    - 'db/**/*'
+    - 'lib/**/*'
+    - 'bin/*'
+    - 'Gemfile'
+    - 'Gemfile.lock'
+    - 'Rakefile'
+    
 Documentation:
   Enabled: false
 
-Layout/IndentationConsistency:
-  EnforcedStyle: rails
+AbcSize:
+  Max: 32
+
+LineLength:
+  Max: 100
+
+MethodLength:
+  Max: 16
+
+Style/UnneededInterpolation:
+  Enabled: false
 
 Style/FrozenStringLiteralComment:
-  EnforcedStyle: when_needed
-
-Style/PercentLiteralDelimiters:
-  PreferredDelimiters:
-    "%i": "[]"
-    "%r": "{}"
-    "%w": "[]"
-    "%W": "[]"
-    "%x": "[]"
-
-Metrics/AbcSize:
-  Max: 20
-
-Metrics/LineLength:
-  Max: 120
-
-Metrics/MethodLength:
-  Max: 50
-
-Metrics/BlockLength:
-  Exclude:
-    - '**/*.rake'
-    - 'spec/**/*.rb'
-    - 'config/routes.rb'
-
-Metrics/ClassLength:
-  Max: 500
-
-Metrics/ModuleLength:
-  Max: 500
-
-Style/ClassAndModuleChildren:
   Enabled: false
-
-RSpec/ExampleLength:
-  Enabled: false
-
-RSpec/MultipleExpectations:
-  Max: 100
